添加README目录和修正config格式

--- a/code/CLOVER/config.plist
+++ b/code/CLOVER/config.plist
@@ -232,7 +232,8 @@
 				<string>onboard-1</string>
 				<key>model</key>
 				<string>Iris Plus Graphics 655</string>
-			</dict>		</dict>
+			</dict>		
+		</dict>
 	</dict>
 	<key>Boot</key>
 	<dict>
